--- a/miniprogram/components/carousel/carousel.wxml
+++ b/miniprogram/components/carousel/carousel.wxml
@@ -9,7 +9,7 @@
     >
         <block wx:for="{{source}}" wx:key="*this">
             <swiper-item>
-                <image class="swiper-item {{item}}"></image>
+                <image class="swiper-item {{item}}" src="{{source.imageUrl?source.imageUrl:''}}"></image>
             </swiper-item>
         </block>
       </swiper>
