--- a/miniprogram/components/table/table.scss
+++ b/miniprogram/components/table/table.scss
@@ -3,6 +3,7 @@
     .tr{
         display: flex;
         border-bottom: 1px solid #ccc;
+        flex-wrap: wrap;
         .th{
             flex: 1;
             font-weight: bold;
@@ -18,6 +19,8 @@
             border-right: 1px solid #ccc;
             font-size: 24rpx;
             padding: 6rpx;
+            flex-shrink: 0;
+            word-break: break-all;
         }
         .td:last-child{
             border-right: none;
