常用模板开发

--- a/miniprogram/pages/components/textBanner/textBanner.scss
+++ b/miniprogram/pages/components/textBanner/textBanner.scss
@@ -5,6 +5,7 @@
         margin: 20rpx 0;
         background-color: #B4DED1;
         color: #434947;
+        padding: 10rpx 20rpx;
     }
     .code {
         background-color: #ccc;
