--- a/miniprogram/pages/templateDetail/template/template.wxss
+++ b/miniprogram/pages/templateDetail/template/template.wxss
@@ -297,4 +297,357 @@
   padding: 0 30rpx;
   margin-left: 20rpx;
 }
+
+.cart-item-1 {
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-bottom: 30rpx;
+  border-radius: 6rpx;
+  overflow: hidden;
+  padding: 20rpx 0 20rpx 20rpx;
+}
+
+.cart-item-1 .cart-checkbox {
+  display: inline-block;
+  width: 36rpx;
+  height: 36rpx;
+  margin-right: 10rpx;
+}
+
+.cart-item-1 .cart-checkbox .wx-checkbox-input {
+  margin-right: 20rpx;
+  width: 36rpx;
+  height: 36rpx;
+  border-radius: 18rpx;
+  border: 1px solid #c0c0c0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.cart-item-1 .cart-checkbox .wx-checkbox-input.wx-checkbox-input-checked {
+  background: #070707;
+  border: 1px solid #070707;
+}
+
+.cart-item-1 .goods-image {
+  background-color: #ccc;
+  width: 200rpx;
+  height: 200rpx;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.cart-item-1 .goods-info {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 0 30rpx;
+  height: 200rpx;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.cart-item-1 .goods-info .goods-name {
+  width: 100%;
+  font-size: 26rpx;
+  white-space: normal;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  word-break: break-all;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+.cart-item-1 .goods-info .goods-color-size {
+  display: inline-block;
+  font-size: 24rpx;
+  background-color: #ccc;
+  color: #888;
+  padding: 6rpx 40rpx 6rpx 10rpx;
+  border-radius: 6rpx;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 280rpx;
+  position: relative;
+}
+
+.cart-item-1 .goods-info .goods-color-size::after {
+  content: "";
+  display: inline-block;
+  width: 10rpx;
+  height: 10rpx;
+  border-right: 2rpx solid #888;
+  border-bottom: 2rpx solid #888;
+  position: absolute;
+  top: 16rpx;
+  right: 14rpx;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.cart-item-1 .goods-info .goods-price {
+  font-size: 30rpx;
+  font-weight: bold;
+  color: #fd7304;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.cart-item-1 .goods-info .goods-num-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 180rpx;
+  border: 1px solid #888;
+  line-height: 1;
+  color: #333;
+  font-size: 26rpx;
+  border-radius: 4rpx;
+}
+
+.cart-item-1 .goods-info .goods-num-box .btn {
+  width: 32rpx;
+  height: 32rpx;
+}
+
+.cart-item-1 .goods-info .goods-num-box .btn-left {
+  border-right: 1px solid #aaa;
+}
+
+.cart-item-1 .goods-info .goods-num-box .btn-right {
+  border-left: 1px solid #aaa;
+}
+
+.cart-item-2 {
+  background-color: #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-bottom: 30rpx;
+  border-radius: 6rpx;
+  overflow: hidden;
+  padding: 20rpx 0 20rpx 20rpx;
+}
+
+.cart-item-2 .cart-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20rpx;
+}
+
+.cart-item-2 .cart-header .shop-name {
+  position: relative;
+}
+
+.cart-item-2 .cart-header .shop-name::after {
+  position: absolute;
+  top: 18rpx;
+  right: -30rpx;
+  content: '';
+  width: 10rpx;
+  height: 10rpx;
+  display: inline-block;
+  border-top: 2rpx solid #888;
+  border-right: 2rpx solid #888;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.cart-item-2 .goods-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20rpx;
+}
+
+.cart-item-2 .cart-checkbox {
+  display: inline-block;
+  width: 40rpx;
+  height: 40rpx;
+  line-height: 40rpx;
+  padding: 0;
+  margin-right: 10rpx;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.cart-item-2 .cart-checkbox .wx-checkbox-input {
+  margin-right: 20rpx;
+  width: 40rpx;
+  height: 40rpx;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 20rpx;
+  border: 1px solid #c0c0c0;
+  box-sizing: border-box;
+}
+
+.cart-item-2 .cart-checkbox .wx-checkbox-input.wx-checkbox-input-checked {
+  background: #070707;
+  border: 1px solid #070707;
+}
+
+.cart-item-2 .goods-image {
+  background-color: #ccc;
+  width: 200rpx;
+  height: 200rpx;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.cart-item-2 .goods-info {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 0 30rpx;
+  height: 200rpx;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.cart-item-2 .goods-info .goods-name {
+  width: 100%;
+  font-size: 26rpx;
+  white-space: normal;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  word-break: break-all;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+.cart-item-2 .goods-info .goods-color-size {
+  display: inline-block;
+  font-size: 24rpx;
+  background-color: #ccc;
+  color: #888;
+  padding: 6rpx 40rpx 6rpx 10rpx;
+  border-radius: 6rpx;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 280rpx;
+  position: relative;
+}
+
+.cart-item-2 .goods-info .goods-color-size::after {
+  content: "";
+  display: inline-block;
+  width: 10rpx;
+  height: 10rpx;
+  border-right: 2rpx solid #888;
+  border-bottom: 2rpx solid #888;
+  position: absolute;
+  top: 16rpx;
+  right: 14rpx;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.cart-item-2 .goods-info .goods-price {
+  font-size: 30rpx;
+  font-weight: bold;
+  color: #fd7304;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.cart-item-2 .goods-info .goods-num-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 180rpx;
+  border: 1px solid #888;
+  line-height: 1;
+  color: #333;
+  font-size: 26rpx;
+  border-radius: 4rpx;
+}
+
+.cart-item-2 .goods-info .goods-num-box .btn {
+  width: 32rpx;
+  height: 32rpx;
+}
+
+.cart-item-2 .goods-info .goods-num-box .btn-left {
+  border-right: 1px solid #aaa;
+}
+
+.cart-item-2 .goods-info .goods-num-box .btn-right {
+  border-left: 1px solid #aaa;
+}
 /*# sourceMappingURL=template.wxss.map */
