--- a/miniprogram/pages/templateDetail/template/template.scss
+++ b/miniprogram/pages/templateDetail/template/template.scss
@@ -515,3 +515,80 @@
         }
     }
 }
+
+// 优惠券项模板样式
+.coupon-item {
+    display: flex;
+    background-color: #fff;
+    box-sizing: border-box;
+    border-radius: 10rpx;
+    width: 100%;
+    padding: 20rpx;
+    margin-bottom: 20rpx;
+
+    .coupon-l {
+        width: 200rpx;
+        height: 200rpx;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 40rpx;
+        font-weight: bold;
+        color: #F80707;
+
+        .use-limit {
+            font-size: 28rpx;
+        }
+    }
+
+    .coupon-r {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .r-top {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        word-break: break-all;
+        font-size: 24rpx;
+
+        .label {
+            color: #fff;
+            background-color: #F80707;
+            font-size: 22rpx;
+            border-radius: 6rpx;
+            text-align: center;
+            height: 30rpx;
+            line-height: 30rpx;
+            margin-right: 20rpx;
+        }
+    }
+
+    .r-bottom {
+        font-size: 22rpx;
+        color: #999;
+
+        .coupon-date {
+            padding-bottom: 20rpx;
+            border-bottom: 1px dashed #999;
+        }
+
+        .coupon-detail-btn {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-top: 20rpx;
+
+            image {
+                width: 24rpx;
+                height: 24rpx;
+            }
+        }
+
+        
+    }
+}
