--- a/miniprogram/pages/templateDetail/templateDetail.wxss
+++ b/miniprogram/pages/templateDetail/templateDetail.wxss
@@ -651,6 +651,112 @@
   border-left: 1px solid #aaa;
 }
 
+.coupon-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10rpx;
+  width: 100%;
+  padding: 20rpx;
+  margin-bottom: 20rpx;
+}
+
+.coupon-item .coupon-l {
+  width: 200rpx;
+  height: 200rpx;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 40rpx;
+  font-weight: bold;
+  color: #F80707;
+}
+
+.coupon-item .coupon-l .use-limit {
+  font-size: 28rpx;
+}
+
+.coupon-item .coupon-r {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.coupon-item .r-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  word-break: break-all;
+  font-size: 24rpx;
+}
+
+.coupon-item .r-top .label {
+  color: #fff;
+  background-color: #F80707;
+  font-size: 22rpx;
+  border-radius: 6rpx;
+  text-align: center;
+  height: 30rpx;
+  line-height: 30rpx;
+  margin-right: 20rpx;
+}
+
+.coupon-item .r-bottom {
+  font-size: 22rpx;
+  color: #999;
+}
+
+.coupon-item .r-bottom .coupon-date {
+  padding-bottom: 20rpx;
+  border-bottom: 1px dashed #999;
+}
+
+.coupon-item .r-bottom .coupon-detail-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 20rpx;
+}
+
+.coupon-item .r-bottom .coupon-detail-btn image {
+  width: 24rpx;
+  height: 24rpx;
+}
+
 page {
   background-color: #f5f5f5;
 }
