--- a/miniprogram/pages/templateDetail/template/template.scss
+++ b/miniprogram/pages/templateDetail/template/template.scss
@@ -254,22 +254,20 @@
     overflow: hidden;
     padding: 20rpx 0 20rpx 20rpx;
 
+    // 复选框样式
     .cart-checkbox {
-        display: inline-block;
-        width: 36rpx;
-        height: 36rpx;
-        margin-right: 10rpx
+        width: 40rpx;
+        height: 40rpx;
+        margin-right: 10rpx;
     }
     .cart-checkbox .wx-checkbox-input{
         margin-right: 20rpx;
-        width: 36rpx;
-        height: 36rpx;
-        border-radius: 18rpx;
-        border: 1px solid #c0c0c0;
+        width: 40rpx;
+        height: 40rpx;
+        border-radius: 50%;
         box-sizing: border-box;
         &.wx-checkbox-input-checked {
             background: #070707;
-            border: 1px solid #070707;
         }
     }
 
@@ -305,7 +303,7 @@
         .goods-color-size {
             display: inline-block;
             font-size: 24rpx;
-            background-color: #ccc;
+            background-color: #eee;
             color: #888;
             padding: 6rpx 40rpx 6rpx 10rpx;
             border-radius: 6rpx;
@@ -345,20 +343,21 @@
             justify-content: space-between;
             align-items: center;
             width: 180rpx;
-            border: 1px solid #888;
+            // border: 1px solid #888;
             line-height: 1;
             color: #333;
             font-size: 26rpx;
             border-radius: 4rpx;
+            background-color: #eee;
             .btn{
                 width: 32rpx;
                 height: 32rpx;
             }
             .btn-left {
-                border-right: 1px solid #aaa;
+                border-right: 1px solid #fff;
             }
             .btn-right {
-                border-left: 1px solid #aaa;
+                border-left: 1px solid #fff;
             }
         }
     }
@@ -373,25 +372,22 @@
     overflow: hidden;
     padding: 20rpx 0 20rpx 20rpx;
 
-    .cart-header {
+    .cart-title {
         display: flex;
         align-items: center;
         margin-bottom: 20rpx;
+        font-size: 26rpx;
+        font-weight: bold;
 
         .shop-name{ 
             position: relative;
+            font-size: 26rpx;
+            font-weight: bold;
         }
-        .shop-name::after{
-            position: absolute;
-            top: 18rpx;
-            right: -30rpx;
-            content: '';
-            width: 10rpx;
-            height: 10rpx;
-            display: inline-block;
-            border-top: 2rpx solid #888;
-            border-right: 2rpx solid #888;
-            transform: rotate(45deg);
+
+        .icon-right {
+            width: 28rpx;
+            height: 28rpx;
         }
     }
 
@@ -402,26 +398,20 @@
         margin-bottom: 20rpx;
     }
 
+    // 复选框样式
     .cart-checkbox {
-        display: inline-block;
         width: 40rpx;
         height: 40rpx;
-        line-height: 40rpx;
-        padding: 0;
         margin-right: 10rpx;
-        box-sizing: border-box;
     }
     .cart-checkbox .wx-checkbox-input{
         margin-right: 20rpx;
         width: 40rpx;
         height: 40rpx;
-        box-sizing: border-box;
-        border-radius: 20rpx;
-        border: 1px solid #c0c0c0;
+        border-radius: 50%;
         box-sizing: border-box;
         &.wx-checkbox-input-checked {
             background: #070707;
-            border: 1px solid #070707;
         }
     }
 
@@ -457,7 +447,7 @@
         .goods-color-size {
             display: inline-block;
             font-size: 24rpx;
-            background-color: #ccc;
+            background-color: #eee;
             color: #888;
             padding: 6rpx 40rpx 6rpx 10rpx;
             border-radius: 6rpx;
@@ -497,20 +487,21 @@
             justify-content: space-between;
             align-items: center;
             width: 180rpx;
-            border: 1px solid #888;
+            // border: 1px solid #888;
             line-height: 1;
             color: #333;
             font-size: 26rpx;
             border-radius: 4rpx;
+            background-color: #eee;
             .btn{
                 width: 32rpx;
                 height: 32rpx;
             }
             .btn-left {
-                border-right: 1px solid #aaa;
+                border-right: 1px solid #fff;
             }
             .btn-right {
-                border-left: 1px solid #aaa;
+                border-left: 1px solid #fff;
             }
         }
     }
